// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityStartDiscussionComponent should show community start discussion 1`] = `
<pf-community-start-discussion
  communityPostAttachmentsCount$={[Function Store]}
  postType="0"
  route={[Function Object]}
  showPostJobButton={[Function Boolean]}
  store={[Function Store]}
  submittingCommunityJobSuccess$={[Function Store]}
  submittingCommunityPost$={[Function Store]}
>
  <div
    class="row mb-3"
  >
    <div
      class="col-4"
    >
      <div
        class="list-group"
      >
        <pf-community-tab
          data-qa-id="cnt-postTypeDiscussion"
        />
        <pf-community-tab
          data-qa-id="cnt-postTypeQuestion"
        />
        <pf-community-tab
          data-qa-id="cnt-postTypeJob"
        />
      </div>
    </div>
    <div
      class="col-8 start-discussion-body pt-2 pb-2"
    >
      <div
        class="w-100 pl-3"
      >
        
        
        
        
      </div>
    </div>
  </div>
</pf-community-start-discussion>
`;

exports[`CommunityStartDiscussionComponent should show community start poll 1`] = `
<pf-community-start-discussion
  communityPostAttachmentsCount$={[Function Store]}
  postType={[Function Number]}
  route={[Function Object]}
  showPostJobButton={[Function Boolean]}
  store={[Function Store]}
  submittingCommunityJobSuccess$={[Function Store]}
  submittingCommunityPost$={[Function Store]}
>
  <div
    class="row mb-3"
  >
    <div
      class="col-4"
    >
      <div
        class="list-group"
      >
        <pf-community-tab
          data-qa-id="cnt-postTypeDiscussion"
        />
        <pf-community-tab
          data-qa-id="cnt-postTypeQuestion"
        />
        <pf-community-tab
          data-qa-id="cnt-postTypeJob"
        />
      </div>
    </div>
    <div
      class="col-8 start-discussion-body pt-2 pb-2"
    >
      <div
        class="w-100 pl-3"
      >
        
        
        
        
      </div>
    </div>
  </div>
</pf-community-start-discussion>
`;
